# asterisk_perception

./: .gitignore  README.md
asterisk_ar_track_alvar/: CMakeLists.txt  package.xml
asterisk_ar_track_alvar/config/bundle/: single_01.xml  single_02.xml  single_03.xml  single_04.xml  single_05.xml  single_06.xml
asterisk_ar_track_alvar/launch/: bundle_tracker.launch  individual_tracker.launch
asterisk_aruco_ros/: CMakeLists.txt  package.xml
asterisk_aruco_ros/launch/: detected_marker_publisher.launch  single_marker_detector.launch
asterisk_calibration/: CMakeLists.txt  package.xml
asterisk_calibration/launch/: organized_multi_plane_segmentation.launch  realsense2_marker_detector_ar_track_alvar.launch  realsense2_marker_detector_aruco.launch  realsense2_organized_multi_plane_segmentation.launch
asterisk_calibration/rviz/: asterisk_realsense2_calibration.rviz  asterisk_realsense2_calibration_plane_segmentation.rviz
asterisk_camera_omnidirectional/: CMakeLists.txt  package.xml
asterisk_camera_omnidirectional/camera_info/: insta360_back.yaml  insta360_front.yaml  pinhole_camera.yaml
asterisk_camera_omnidirectional/config/: pov_camera_control.yaml
asterisk_camera_omnidirectional/launch/: camera_info_setter.launch  pov_camera_gazebo.launch  pov_camera_joy_controller_insta360air.launch  test_pov_camera_gazebo.launch  test_pov_camera_insta360air.launch  test_pov_camera_joy_controller_gazebo.launch  test_pov_camera_joy_controller_insta360air.launch  usb_cam_hardware_mjpeg.launch
asterisk_camera_omnidirectional/rviz/: pov_camera_gazebo.rviz  pov_camera_info.rviz  pov_camera_insta360.rviz
asterisk_camera_omnidirectional/src/: camera_info_setter.cpp  pov_camera_joy_controller.cpp
asterisk_camera_omnidirectional/urdf/: pov_camera.urdf
asterisk_camera_omnidirectional/worlds/: pov_camera.world
asterisk_perception/: CMakeLists.txt  package.xml
