<?xml version="1.0"?>
<package format="2">
  <name>asterisk_camera_omnidirectional</name>
  <version>0.0.0</version>
  <description>The asterisk_camera_omnidirectional package</description>

  <maintainer email="kobayashi@kdel.info.eng.osaka-cu.ac.jp">Daiki KOBAYASHI</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>camera_info_manager</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>image_reprojection</exec_depend>
  <exec_depend>usb_cam_hardware</exec_depend>
  <exec_depend>usb_cam_controllers</exec_depend>
  <!-- <exec_depend>rosbridge_server</exec_depend> -->
  <!-- <exec_depend>usb_cam</exec_depend> -->
  <!-- <exec_depend>libuvc_camera</exec_depend> -->

  <export>
  </export>
</package>
