<?xml version="1.0"?>
<package format="2">
  <name>asterisk_perception</name>
  <version>0.0.0</version>
  <description>The asterisk_perception package</description>

  <maintainer email="kobayashi@kdel.info.eng.osaka-cu.ac.jp">Daiki KOBAYASHI</maintainer>

  <license>TODO</license>

  <exec_depend>asterisk_camera_omnidirectinal</exec_depend>
  <exec_depend>asterisk_urg_omnidirectinal</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage />
  </export>
</package>
